Update config for new screen setup MVP

--- a/Profiles/5k2k only.ini
+++ b/Profiles/5k2k only.ini
@@ -1,6 +1,6 @@
 [General]
 IsBacklightEnabled=true
-LightpackMode=Ambilight
+LightpackMode=MoodLamp
 
 [Device]
 Brightness=82
@@ -2058,6 +2058,6 @@ Position=@Point(2011 0)
 Size=@Size(60 324)
 
 [MoodLamp]
-Color=#8dcbf8
-LiquidMode=true
+Color=#35ff1b
+LiquidMode=false
 Speed=13
