--- a/main.conf
+++ b/main.conf
@@ -26,7 +26,7 @@ Port=3636
 BaudRate=115200
 ColorSequence=RGB
 NumberOfLeds=180
-SerialPort=/dev/tty.usbserial-14440
+SerialPort=tty.usbserial-14230
 
 [AlienFx]
 NumberOfLeds=1
